trying to fix hamburger icon on mobile safari

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ align-items: center;
   width: 30px;
   transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
   border-radius: 2px;
+  right:0;
 }
 
 .menu-button::before {
